src/components/Tweet/TweetItem.module.css
.card {
  margin: 0.5rem 0;
  padding: 1.5rem;
  border: 1px solid rgba(55, 65, 81, 0.95);
  max-width: 100%;
}

.card p {
  margin: 16px 16px;
  font-size: 18px;
  overflow-wrap: break-word;
}
.username {
  display: flex;
  align-items: center;

  white-space: nowrap;
}

.avatar {
  opacity: 0.7;
}
.atSign {
  height: 24px;
}
.heart {
  height: 24px;
  cursor: pointer;
  font-size: 20px;
  color: rgba(55, 65, 81, 0.95);
}

.like {
  cursor: pointer;
  height: 24px;
  color: #dcbaff;
}
.delete {
  z-index: 1;
  cursor: pointer;
  height: 34px;
  color: rgba(55, 65, 81, 0.95);
}

.card header div {
  display: flex;
  justify-content: space-between;
}
/* username */
.card header p {
  margin-left: 16px;
  color: rgba(55, 65, 81, 0.95);

  font-size: 18px;
}
.input {
  color: rgba(55, 65, 81, 0.95);
}
.card footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border-top: 1px solid rgba(55, 65, 81, 0.95);
  padding: 0.5em;
}

.time {
  font-size: 14px;

  color: rgb(80, 80, 80);
}

